# repeated-prisoners-dilemma

./: .gitignore  .pylintrc  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci-package.yml  coverage.yml  format.yml  test.yml  typecheck.yml
.github/workflows/setup-poetry-env/: action.yml
.github/workflows/setup-uv-env/: action.yml
src/: game.py  move.py  payoff.py  player.py  round.py
src/repeated_prisoners_dilemma/: game.py  payoff.py  player.py  round.py
src/repeated_prisoners_dilemma/strategy/: __init__.py  constant.py  random.py  strategy.py  tit_for_tat.py
src/strategy/: constant.py  random.py  strategy.py  tit_for_tat.py
tests/: conftest.py  fixtures.py  test_game.py  test_move.py  test_payoff.py  test_player.py  test_player_number.py  test_round.py
tests/test_strategy/: test_constant.py  test_random.py  test_tit_for_tat.py
