[tool.poetry]
name = "repeated-prisoners-dilemma"
version = "0.1.0"
description = "Game of Repeated Prisoner's Dilemma"
authors = ["Cedric Bleuler <cedric.bleuler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"
numpy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-coverage = "^0.0"
black = "^26.1.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src/"
]
testpaths = [
    "tests"
]