[project]
name = "repeated-prisoners-dilemma"
version = "0.1.0"
description = "Game of Repeated Prisoner's Dilemma"
authors = [
    {name = "Cedric Bleuler", email = "cedric.bleuler@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
ci = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=26.1.0",
    "pylint>=4.0.5",
]
release = [
    "build>=1.4.3",
    "importlib-metadata>=9.0.0",
    "setuptools-scm>=10.0.5",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src/"
]
testpaths = [
    "tests"
]
